# ai-study-assistant

./: .env.example  .gitignore  README.md
backend/: .gitignore  ARCHITECTURE.md  pyproject.toml  requirements.txt  structure.txt  test_chunking.db  test_db.py  test_embedding_db.db  test_rag_db.db  test_repositories.db  test_retrieval_db.db  test_service.db  test_vectorstore_db.db
backend/alembic/: env.py
backend/alembic/versions/: 4cbcb0dc2567_initial_schema.py  739065f3b7e4_create_document_chunks_table.py  91668ac4dbda_create_documents_table.py
backend/app/: main.py
backend/app/chunking/: __init__.py  exceptions.py  pipeline.py  schemas.py  splitter.py  tokenizer.py
backend/app/core/: config.py  logging.py
backend/app/database/: enums.py  mixins.py  session.py
backend/app/dependencies/: __init__.py  auth.py  chat.py
backend/app/embedding/: __init__.py  config.py  exceptions.py  models.py  pipeline.py  provider.py  schemas.py  service.py
backend/app/exceptions/: __init__.py  auth.py  chat.py  document.py  workspace.py
backend/app/llm/: __init__.py  config.py  (+6 more)
backend/tests/: test_chat_api.py  test_chat_schemas.py  test_chat_service.py  test_chunking.py  test_compressor.py  test_context_builder.py  test_conversation_api.py  test_conversation_service.py  test_embedding.py  test_explain.py  test_llm.py  test_mmr.py  test_parent_retrieval.py  test_pdf_parser.py  test_prompts.py  test_query_rewriter.py  test_rag.py  test_repositories.py  test_retrieval.py  test_summary.py  test_text_processing.py  test_threshold.py  test_vectorstore.py  test_workspaces.py
(+289 files in other folders)
