[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.11.0",
    "email-validator>=2.0.0",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.100.0",
    "google-genai>=2.11.0",
    "langchain-text-splitters>=1.1.2",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.0",
    "psycopg[binary]>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.0.0",
    "pyjwt>=2.8.0",
    "pymupdf>=1.28.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.0",
    "tiktoken>=0.13.0",
    "torch>=2.13.0",
    "uvicorn>=0.22.0",
]
